- diskdrake --nfs
  o ensure "nfs-common" is started (#34103)
- adduserdrake
  o force the password to be utf8 (#23273)

Version 10.19 - 21 March 2008

- bootloader-config, drakboot:
  o fix device.map if it is not consistent with the system
    (eg: it says hd0 in sdb whereas it now is sda) (#39160)
- diskdrake:
  o fix setting mount point of a /dev/mdX (#39142)
    (regression introduced in 10.8)
- list gspca, ov51x-jpeg and qc-usb-messenger in webcam modules group
- harddrake:
  o recommend using insensitive search (#39136)
  o notify at X11 startup when we switched to free video driver (#39164)
- drakupdate_fstab:
  o do not print added/removed mountpoints with --auto (when run from
    harddrake, like in Mandriva One), but add a --verbose option instead

Version 10.18 - 21 March 2008

- drakfont:
  o fix importing fonts without chkfontpath (#37604)
  o stop restarting XFS server
- diskdrake:
  o keep existing swap UUID (#38877)
- partitioning wizard: do not show error message in wizard mode when
  cancel is clicked (clean wizard window instead)
- finish-install:
  o allow to ask both root and user accounts in the same step
  o replace home path in user config files when renaming a user (#30380)

Version 10.17 - 20 March 2008

- use UUID by default (for diskdrake and draklive-install)
- finish-install:
  o write modprobe.conf after configuring network
  o do not configure network if already up
  o allow to use a simplified time step
    (no timezone selection, ntp settings as advanced)
- move functions to get available space from installer
  (to be used in draklive-install)
- localedrake: update OpenOffice/BrOffice alternative according to
  selected lang (#37820)

Version 10.16.1 - 18 March 2008

- handle position for paned widgets (needed for rpmdrake, #38762)

Version 10.16 - 18 March 2008

- adduserdrake:
  o display kdm/gdm icon again (was disabled on year ago)
- do not write aliases for asus_acpi and thinkpad_acpi in